--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <h2>Get in touch</h2>
       <p>If you have any questions, project inquiries, or just want to say hello, feel free to reach out to me through the following channels:</p>
       <ul class="social-links">
-        <li>Gmail :  <a href="mailto:your@email.com" target="_blank">Gmail</a></li>
+        <li>Gmail :  <a href="souravpal9871@gmail.com" target="_blank">Gmail</a></li>
         <li>Linkedin : <a href="https://www.linkedin.com/in/sourav-pal-097108188/" target="_blank">Linkedin</a></li>
         <li>Github :  <a href="https://github.com/souravpal9" target="_blank">Github</a></li>
         <!-- Add more social media links here -->
