--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <p>I'm a DSEU student in DSEU Rajokari Campus. As a student, I have an experience of building Web and Mobile
             application with Javascript / HTML / CSS and some other cool libraries and frameworks.</p>
             <a href="#contact" class="btn btn-primary">Get In Touch</a>
-            <a href="https://drive.google.com/drive/u/0/my-drive" class="btn btn-primary">Download cv</a>
+            <a href="https://drive.google.com/file/d/1jx7GsAhW4xXMDHRhlH0YA_yWsWmBcuQx/view?usp=drive_link" class="btn btn-primary">Download cv</a>
           </div>
         </div>
       </div>
